# AxisQuant

./: .gitignore  PLAN.md  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/axisquant_api/: __init__.py  main.py
apps/api/axisquant_api/core/: config.py  logging.py
apps/api/axisquant_api/routers/: health.py
apps/api/tests/: test_health.py
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/shared/: ThemeProvider.tsx
apps/web/lib/: site-config.ts
apps/web/prisma/: schema.prisma
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/src/: App.tsx  index.css
client/src/components/layout/: Footer.tsx  Navbar.tsx
client/src/lib/: api.ts
client/src/pages/: About.tsx  ArticleDetail.tsx  Blog.tsx  Contact.tsx  Datasets.tsx  FinetunedModels.tsx  Home.tsx  Models.tsx  OpenSource.tsx  QuantizedModels.tsx  Research.tsx  Team.tsx
infra/: docker-compose.yml
server/: .env.example  package-lock.json  package.json
server/src/: index.ts
server/src/config/: db.ts
server/src/middleware/: auth.ts
server/src/models/: Benchmark.ts  Contact.ts  Publication.ts  Team.ts  User.ts
server/src/routes/: auth.ts  benchmarks.ts  contact.ts  github.ts  hf.ts  publications.ts  team.ts
