[project]
name = "axisquant-api"
version = "0.0.0"
description = "AxisQuant FastAPI backend — Hugging Face integration, scheduled jobs, contact, webhooks"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "AxisQuant" }]

dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "httpx>=0.28.1",
  "huggingface-hub>=0.27.0",
  "redis>=5.2.1",
  "structlog>=24.4.0",
  "orjson>=3.10.13",
  "python-multipart>=0.0.20",
  "tenacity>=9.0.0",
  "apscheduler>=3.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.1",
  "mypy>=1.14.1",
  "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["axisquant_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
  "E", "F", "W",        # pycodestyle/pyflakes
  "I",                  # isort
  "B",                  # flake8-bugbear
  "UP",                 # pyupgrade
  "ASYNC",              # async correctness
  "S",                  # bandit security
  "RUF",                # ruff-specific
]
ignore = [
  "S101",  # asserts in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
